--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="backGroundMain">#F9F9F9</color>
     <color name="grey">#818181</color>
     <color name="grey_persona_layout">#D4D5D5</color>
     <color name="celeste">#8DCDFF</color>
@@ -14,4 +15,5 @@
     <color name="gray_backround">#42000000</color>
     <color name="grayDarkBackgroundMode">#303030</color>
     <color name="box_color" />
+    <color name="text">@color/black</color>
 </resources>
