--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -25,6 +25,7 @@
         app:endIconMode="clear_text"
         app:errorEnabled="true"
         app:hintEnabled="false"
+        style="Widget.App.TextInputLayout"
         app:startIconDrawable="@drawable/account_circle_48px2"
         >
 
@@ -34,6 +35,7 @@
             android:layout_height="60dp"
             android:background="@drawable/border_edit_text"
             android:inputType="text"
+            style="@style/textView"
             android:maxLength="20"
             android:hint="@string/email"
             android:textColorHint="@color/grey"
@@ -55,6 +57,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:passwordToggleEnabled="true"
         app:hintEnabled="false"
+        style="Widget.App.TextInputLayout"
         app:startIconDrawable="@drawable/key_48px"
         >
 
@@ -68,6 +71,7 @@
             android:maxLength="20"
             android:textColorHint="@color/grey"
             android:hint="@string/password"
+            style="@style/textView"
             android:fontFamily="@font/inter_semibold"
             android:textStyle="bold|italic"
             />
@@ -197,6 +201,7 @@
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="20sp"
-        android:textStyle="italic" />
+        android:textStyle="italic"
+        style="@style/textView"/>
     
 </androidx.constraintlayout.widget.ConstraintLayout>
