--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -101,8 +101,6 @@
     </LinearLayout>
 
 
-
-
     <TextView
         android:id="@+id/informazioniView"
         android:layout_width="match_parent"
@@ -112,8 +110,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="20dp"
         android:text="Informazioni"
-        android:textSize="20sp"
-        />
+        android:textSize="20sp" />
 
     <Switch
         android:id="@+id/myswitch"
