--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,10 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="theme.Clothual" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Theme.LightNigthThemeMode" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/black</item>
+        <item name="colorPrimaryDark">#171717</item>
         <item name="colorOnPrimary">@color/black</item>
+        <item name="colorAccent">@color/white</item>
+        <item name="android:windowBackground">#303030</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_200</item>
@@ -17,25 +19,25 @@
     </style>
 
     <!-- Styles for TextInputLayout-->
-    <style name="Widget.App.TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+    <style name="Widget.App.TextInputLayout" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:textColorHint">@color/white</item>
         <item name="boxStrokeColor">@color/black</item>
         <item name="materialThemeOverlay">@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined</item>
     </style>
 
-    <style name="ThemeOverlay.AppTheme.TextInputEditText.Outlined" parent="ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox">
+    <style name="ThemeOverlay.AppTheme.TextInputEditText.Outlined" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="colorPrimary">@color/purple_200</item>
 
         <item name="colorOnSurface">@color/gray_backround</item>
         <item name="android:textCursorDrawable">@color/white</item>
     </style>
 
-    <style name="textView" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="textView" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="hintTextColor">@color/white</item>
     </style>
 
 
-    <style name="Widget.App.BottomNavigationView" parent="Widget.Material3.BottomNavigationView">
+    <style name="Widget.App.BottomNavigationView" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="backgroundTint">@color/black</item>
         <item name="itemIconTint">@color/white</item>
         <item name="itemTextColor">@color/white</item>
@@ -46,13 +48,7 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
-        <item name="android:windowBackground">@color/celeste</item>
-        <item name="android:colorBackground">@color/celeste</item>
-        <item name="android:colorForeground">@color/celeste</item>
-        <item name="android:colorForegroundInverse">@color/celeste</item>
+    <style name="AppBarOverlay" parent="Theme.AppCompat.DayNight.NoActionBar"/>
 
-    </style>
-
-    <style name="PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="PopupOverlay" parent="Theme.AppCompat.DayNight.NoActionBar" />
 </resources>
