--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,43 +1,43 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. Theme.AppCompat.DayNight.NoActionBar -->
-    <style name="theme.Clothual" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Theme.LightNigthThemeMode" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorOnSurface">@color/white</item>
         <item name="colorOnPrimary">@color/white</item>
+        <item name="android:windowBackground">@color/backGroundMain</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here.-->
+        <item name="android:statusBarColor">@color/black</item>
+        <!-- Customize your theme here. -->
         <item name="textInputStyle">@style/Widget.App.TextInputLayout</item>
 
     </style>
 
 
     <!-- Style for TextInputLayout-->
-    <style name="Widget.App.TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+    <style name="Widget.App.TextInputLayout" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:textColorHint">@color/black</item>
         <item name="materialThemeOverlay">@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined</item>
         <item name="boxStrokeColor">@color/white</item>
     </style>
 
-    <style name="textView" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <item name="hintTextColor">@color/black</item>
-    </style>
-
-
-    <style name="ThemeOverlay.AppTheme.TextInputEditText.Outlined" parent="ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox">
+    <style name="ThemeOverlay.AppTheme.TextInputEditText.Outlined"
+        parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorOnSurface">@color/white</item>
         <item name="android:textCursorDrawable">@color/black</item>
     </style>
 
+    <style name="textView" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="hintTextColor">@color/black</item>
+    </style>
 
-
-    <style name="Widget.App.BottomNavigationView" parent="Widget.Design.BottomNavigationView">
+    <style name="Widget.App.BottomNavigationView" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="backgroundTint">@color/white</item>
         <item name="itemIconTint">@color/black</item>
         <item name="itemTextColor">@color/black</item>
@@ -48,9 +48,9 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="AppBarOverlay" parent="Theme.AppCompat.DayNight.NoActionBar" />
 
-    <style name="PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="PopupOverlay" parent="Theme.AppCompat.DayNight.NoActionBar" />
 
 
 </resources>
