--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -37,7 +37,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TUTTO"
+                    android:text="@string/all"
                     android:fontFamily="@font/montserrat_subrayada"
                     android:textStyle="bold"
                     android:textSize="35sp"
@@ -61,7 +61,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="SCARPE"
+                    android:text="@string/shoes"
                     android:fontFamily="@font/montserrat_subrayada"
                     android:textStyle="bold"
                     android:textSize="35sp"
@@ -89,7 +89,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal|center_vertical"
                     android:fontFamily="@font/montserrat_subrayada"
-                    android:text="PANTALONI"
+                    android:text="@string/trousers"
                     android:textColor="@color/white"
                     android:textSize="35sp"
                     android:textStyle="bold" />
@@ -111,7 +111,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="T-SHIRT"
+                    android:text="@string/tshirt"
                     android:fontFamily="@font/montserrat_subrayada"
                     android:textStyle="bold"
                     android:textSize="35sp"
@@ -136,7 +136,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="FELPE"
+                    android:text="@string/sweatshirt"
                     android:fontFamily="@font/montserrat_subrayada"
                     android:textStyle="bold"
                     android:textSize="35dp"
@@ -161,7 +161,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="JEANS"
+                    android:text="@string/jeans"
                     android:fontFamily="@font/montserrat_subrayada"
                     android:textStyle="bold"
                     android:textSize="35dp"
@@ -185,7 +185,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="PREFERITI"
+                    android:text="@string/favorites"
                     android:fontFamily="@font/montserrat_subrayada"
                     android:textStyle="bold"
                     android:textSize="35dp"
@@ -210,7 +210,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="MAPPA"
+                    android:text="@string/map"
                     android:fontFamily="@font/montserrat_subrayada"
                     android:textStyle="bold"
                     android:textSize="35dp"
