--- a/app/src/main/res/layout/add_dress_layout.xml
+++ b/app/src/main/res/layout/add_dress_layout.xml
@@ -6,20 +6,28 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:id="@+id/clothualAddDress"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
+        >
+
+    <ImageView
+        android:id="@+id/clothualAddDress"
         android:layout_width="wrap_content"
         android:layout_height="70dp"
-        android:src="@drawable/logo_black_on_white"/>
+        android:background="@color/appbar"/>
+
+</androidx.cardview.widget.CardView>
 
     <ImageView
         android:id="@+id/imageViewDress"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:contentDescription="TODO"
-        app:layout_constraintTop_toBottomOf="@id/clothualAddDress"
+        app:layout_constraintTop_toBottomOf="@id/cardView"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         />
