--- a/app/src/main/res/layout/core_layout.xml
+++ b/app/src/main/res/layout/core_layout.xml
@@ -29,6 +29,7 @@
                 android:id="@+id/clothual"
                 android:layout_width="wrap_content"
                 android:layout_height="70dp"
+                tools:ignore="ContentDescription"
                 />
 
         </com.google.android.material.appbar.MaterialToolbar>
