--- a/app/src/main/res/layout/clothual_total_adapter.xml
+++ b/app/src/main/res/layout/clothual_total_adapter.xml
@@ -108,5 +108,35 @@
             app:layout_constraintStart_toEndOf="@id/dati"
             app:layout_constraintBottom_toBottomOf="@id/dati"
             android:background="@color/backGroundAdapter"/>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewTotal"
+        android:layout_width="220dp"
+        android:layout_height="190dp"
+        android:layout_marginStart="85dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:visibility="invisible">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/removeImage"
+            />
+        <Button
+            android:id="@+id/yesTotal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:layout_marginStart="30dp"
+            android:text="@string/yes"/>
+        <Button
+            android:id="@+id/noTotal"
+            android:layout_marginTop="90dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:text="@string/no"/>
+
+    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
 </RelativeLayout>
