--- a/app/src/main/res/layout-land/clothual_total_adapter.xml
+++ b/app/src/main/res/layout-land/clothual_total_adapter.xml
@@ -109,5 +109,40 @@
             app:layout_constraintStart_toEndOf="@id/dati"
             app:layout_constraintBottom_toBottomOf="@id/dati"
             android:background="@color/backGroundAdapter"/>
+
+    <RelativeLayout
+        android:id="@+id/cardViewTotal"
+        android:layout_width="220dp"
+        android:layout_height="170dp"
+        android:layout_marginStart="240dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:background="@drawable/border_layout_adapter_category"
+        android:visibility="visible">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/removeImage"
+            style="@style/textView"
+            android:layout_marginTop="10dp"
+            android:layout_centerHorizontal="true"
+            />
+        <Button
+            android:id="@+id/yesTotal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:layout_centerHorizontal="true"
+            android:text="@string/yes"/>
+        <Button
+            android:id="@+id/noTotal"
+            android:layout_marginTop="90dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="@string/no"/>
+
+    </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
 </RelativeLayout>
