--- a/app/src/main/res/layout-land/edit_profile_layout.xml
+++ b/app/src/main/res/layout-land/edit_profile_layout.xml
@@ -60,12 +60,13 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"/>
 
-    <androidx.cardview.widget.CardView
+    <RelativeLayout
         android:id="@+id/viewUpload"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/imagePersonal"
+        android:background="@drawable/border_layout_adapter_category"
         android:visibility="invisible"
         >
         <LinearLayout
@@ -86,7 +87,7 @@
             android:textAlignment="center"
             android:text="Scatta Foto"/>
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/modifyImage"
