--- a/app/src/main/res/layout/photo_image_layout.xml
+++ b/app/src/main/res/layout/photo_image_layout.xml
@@ -13,33 +13,37 @@
             android:layout_height="150dp"
             tools:ignore="MissingConstraints" />
 
-        <androidx.cardview.widget.CardView
+        <RelativeLayout
             android:id="@+id/cardViewPhoto"
             android:layout_width="160dp"
             android:layout_height="160dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
+            android:background="@drawable/border_layout_adapter_category"
             android:visibility="invisible">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/removeImage"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="5dp"
+                    style="@style/textView"
                     />
                 <Button
                     android:id="@+id/yes"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="40dp"
-                    android:layout_marginStart="30dp"
+                    android:layout_centerHorizontal="true"
                     android:text="@string/yes"/>
                 <Button
                     android:id="@+id/no"
                     android:layout_marginTop="90dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="30dp"
+                    android:layout_centerHorizontal="true"
                     android:text="@string/no"/>
 
-        </androidx.cardview.widget.CardView>
+        </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
