--- a/app/src/main/res/layout/clothual_total_adapter.xml
+++ b/app/src/main/res/layout/clothual_total_adapter.xml
@@ -100,14 +100,16 @@
             app:layout_constraintTop_toBottomOf="@id/edit"
             android:layout_marginTop="40dp"
             android:background="@color/backGroundAdapter"
-            android:src="@drawable/delete_48px"/>
+            android:src="@drawable/delete_48px"
+            android:contentDescription="delete" />
         <ImageButton
             android:id="@+id/favorite"
             android:layout_width="30dp"
             android:layout_height="30dp"
             app:layout_constraintStart_toEndOf="@id/dati"
             app:layout_constraintBottom_toBottomOf="@id/dati"
-            android:background="@color/backGroundAdapter"/>
+            android:background="@color/backGroundAdapter"
+            android:contentDescription="preferiti" />
 
     <RelativeLayout
         android:id="@+id/cardViewTotal"
