--- a/app/src/main/res/layout/fragment_credential_recovery.xml
+++ b/app/src/main/res/layout/fragment_credential_recovery.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UI.welcome.CrdentialRecovery.CredentialRecovery">
+    tools:context=".UI.welcome.CredentialRecovery.CredentialRecovery">
 
 
 </FrameLayout>
