--- a/app/src/main/res/layout/core_layout.xml
+++ b/app/src/main/res/layout/core_layout.xml
@@ -37,6 +37,14 @@
     </com.google.android.material.appbar.AppBarLayout>
 
 
+    <!--<View
+        android:id="@+id/view"
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:layout_gravity="top"
+        android:background="@color/black"
+        app:layout_anchor="@id/bottom_navigation" />!-->
+
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/nav_host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
@@ -45,14 +53,6 @@
         android:layout_marginTop="55dp"
         app:defaultNavHost="true"
         app:navGraph="@navigation/nav_core" />
-
-    <View
-        android:id="@+id/view"
-        android:layout_width="wrap_content"
-        android:layout_height="1dp"
-        android:layout_gravity="top"
-        android:background="@color/black"
-        app:layout_anchor="@id/bottom_navigation" />
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
