--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -169,7 +169,7 @@
                     android:layout_gravity="center_horizontal|center_vertical"/>
             </androidx.cardview.widget.CardView>
 
-            <!-- PREFERITI -->
+            <!-- PREFERITI
             <androidx.cardview.widget.CardView
                 android:id="@+id/favorite"
                 android:layout_width="match_parent"
@@ -177,7 +177,7 @@
                 android:layout_margin="8dp"
                 app:cardCornerRadius="20dp"
                 app:cardElevation="6dp"
-                android:layout_marginBottom="70dp">
+                android:layout_marginBottom="10dp">
                 <ImageView
                     android:layout_width="375dp"
                     android:layout_height="150dp"
@@ -191,9 +191,9 @@
                     android:textSize="35dp"
                     android:textColor="@color/black"
                     android:layout_gravity="center_horizontal|center_vertical"/>
-            </androidx.cardview.widget.CardView>
+            </androidx.cardview.widget.CardView>-->
 
-            <!-- MAPPA
+            <!-- MAPPA -->
             <androidx.cardview.widget.CardView
                 android:id="@+id/map"
                 android:layout_width="match_parent"
@@ -216,7 +216,7 @@
                     android:textSize="35dp"
                     android:textColor="@color/white"
                     android:layout_gravity="center_horizontal|center_vertical"/>
-            </androidx.cardview.widget.CardView>-->
+            </androidx.cardview.widget.CardView>
 
         </androidx.gridlayout.widget.GridLayout>
     </androidx.core.widget.NestedScrollView>
