--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -6,10 +6,10 @@
             android:icon="@drawable/home_48px"
             android:title="Home" />
         <item
-            android:id="@+id/mapFragment"
+            android:id="@+id/favoriteFragment"
             android:enabled="true"
-            android:icon="@drawable/map_48px"
-            android:title="Map" />
+            android:icon="@drawable/favorite_48px"
+            android:title="Favorite" />
         <item
             android:id="@+id/photoFragment"
             android:enabled="true"
