--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/upload"
-        android:text="Carica una foto"
+        android:text="@string/carica_una_foto"
         android:layout_marginEnd="8dp"
         app:layout_constraintBottom_toBottomOf="@id/fab1Upload"
         app:layout_constraintEnd_toStartOf="@id/fab1Upload"
@@ -60,7 +60,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/makePhoto"
-        android:text="Scatta una foto"
+        android:text="@string/scatta_una_foto"
         android:layout_marginEnd="8dp"
         app:layout_constraintBottom_toBottomOf="@id/fab2Make"
         app:layout_constraintEnd_toStartOf="@id/fab2Make"
