--- a/app/src/main/res/layout/photo_image_layout.xml
+++ b/app/src/main/res/layout/photo_image_layout.xml
@@ -20,7 +20,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             android:background="@drawable/border_layout_adapter_category"
-            android:visibility="visible">
+            android:visibility="invisible">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
