--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -100,17 +100,28 @@
         </LinearLayout>
     </LinearLayout>
 
-
-    <TextView
-        android:id="@+id/informazioniView"
+    <LinearLayout
+        android:id="@+id/mode"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/viewButton"
+        android:layout_centerHorizontal="true"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
-        android:text="Informazioni"
-        android:textSize="20sp" />
+        android:background="@drawable/search_border"
+        android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/informazioniView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:text="Modalità"
+        style="@style/textView"
+        android:fontFamily="@font/inter_semibold" />
 
     <Switch
         android:id="@+id/myswitch"
@@ -118,10 +129,11 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/informazioniView"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="40dp"
         android:layout_marginEnd="20dp"
         android:minHeight="48dp"
         android:text="Night Mode" />
+
+    </LinearLayout>
 
 
 </RelativeLayout>
