--- a/app/src/main/res/layout/photo_image_layout.xml
+++ b/app/src/main/res/layout/photo_image_layout.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="170dp"
     android:layout_height="170dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginStart="16dp"
+    android:background="@drawable/border_layout_adapter_category">
 
         <ImageView
             android:id="@+id/imageViewAdapter"
@@ -11,20 +13,34 @@
             android:layout_marginTop="10dp"
             android:layout_marginStart="10dp"
             android:layout_height="150dp"
-            tools:ignore="MissingConstraints" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
 
         <RelativeLayout
             android:id="@+id/cardViewPhoto"
             android:layout_width="160dp"
             android:layout_height="160dp"
+            android:layout_marginTop="5dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="5dp"
             android:background="@drawable/border_layout_adapter_category"
             android:visibility="invisible">
                 <TextView
+                    android:id="@+id/remove"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/removeImage"
+                    android:text="@string/remove"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="5dp"
+                    style="@style/textView"
+                    />
+                <TextView
+                    android:id="@+id/image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/remove"
+                    android:text="@string/image"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="5dp"
                     style="@style/textView"
@@ -33,14 +49,16 @@
                     android:id="@+id/yes"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="40dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_below="@id/image"
                     android:layout_centerHorizontal="true"
                     android:text="@string/yes"/>
                 <Button
                     android:id="@+id/no"
-                    android:layout_marginTop="90dp"
+                    android:layout_marginTop="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_below="@id/yes"
                     android:layout_centerHorizontal="true"
                     android:text="@string/no"/>
 
