--- a/app/src/main/res/layout/fragment_information.xml
+++ b/app/src/main/res/layout/fragment_information.xml
@@ -6,11 +6,36 @@
     tools:context=".UI.core.Personal.Information.InformationFragment">
 
     <TextView
+        android:id="@+id/version"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Information Fragment"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"/>
+        android:textSize="20sp"
+        style="@style/textView"
+        android:text="@string/version"/>
+
+    <TextView
+        android:id="@+id/developed"
+        android:layout_marginTop="40dp"
+        android:layout_marginStart="20dp"
+        android:layout_below="@id/version"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        style="@style/textView"
+        android:text="@string/developed"/>
+
+    <TextView
+        android:id="@+id/language"
+        android:layout_marginTop="40dp"
+        android:layout_marginStart="20dp"
+        android:layout_below="@id/developed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        style="@style/textView"
+        android:text="@string/language"/>
 
 
 </RelativeLayout>
