--- a/app/src/main/res/layout/photo_image_layout.xml
+++ b/app/src/main/res/layout/photo_image_layout.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="170dp"
     android:layout_height="170dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginStart="16dp"
-    android:background="@drawable/border_layout_adapter_category">
+    android:layout_marginStart="16dp">
 
         <ImageView
             android:id="@+id/imageViewAdapter"
@@ -14,7 +14,8 @@
             android:layout_marginStart="10dp"
             android:layout_height="150dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            android:scaleType="centerCrop"/>
 
         <RelativeLayout
             android:id="@+id/cardViewPhoto"
