--- a/app/src/main/res/layout/activity_clothual_element_show.xml
+++ b/app/src/main/res/layout/activity_clothual_element_show.xml
@@ -28,6 +28,7 @@
         android:layout_height="200dp"
         android:contentDescription="TODO"
         android:layout_marginTop="20dp"
+        android:scaleType="centerCrop"
         app:layout_constraintTop_toBottomOf="@id/cardView"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"/>
@@ -36,7 +37,7 @@
         android:id="@id/view"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:background="@color/black"
@@ -49,21 +50,21 @@
         app:layout_constraintTop_toBottomOf="@id/view"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:scrollbars="none">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="0dp"
             android:layout_marginEnd="20dp">
 
                 <TextView
                     android:id="@+id/spinner"
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="50dp"
+                    android:layout_marginTop="10dp"
                     style="@style/textView"
                     android:layout_centerHorizontal="true"
                     android:fontFamily="@font/inter_semibold"
