--- a/app/src/main/res/layout/add_dress_layout.xml
+++ b/app/src/main/res/layout/add_dress_layout.xml
@@ -39,6 +39,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
+        android:layout_marginBottom="10dp"
         android:background="@color/black"
         app:layout_constraintTop_toBottomOf="@id/imageViewDress"
         tools:layout_editor_absoluteX="0dp" />
