--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -13,8 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        >
+        android:layout_marginEnd="20dp">
 
         <TextView
             android:id="@+id/shoes"
@@ -285,6 +284,7 @@
                 android:layout_below="@id/secondColorRate"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="3dp"
+                android:layout_marginBottom="80dp"
                 style="@style/textView"
                 android:text="Thirt Color"/>
 
