--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -44,10 +44,11 @@
         android:layout_below="@id/editProfile"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginTop="190dp"
+        android:layout_marginTop="20dp"
         android:orientation="vertical"
+        android:gravity="bottom"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="0dp"
         android:background="@drawable/menu_home_border">
 
         <LinearLayout
