--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -76,6 +76,7 @@
                     android:textColorHint="@color/grey"
                     android:hint="@string/surname"
                     style="@style/textView"
+                    android:textSize="20sp"
                     android:fontFamily="@font/inter_semibold"
                     android:textStyle="bold|italic"
                     />
@@ -106,6 +107,7 @@
                     android:textColorHint="@color/grey"
                     android:hint="@string/name"
                     style="@style/textView"
+                    android:textSize="20sp"
                     android:fontFamily="@font/inter_semibold"
                     android:textStyle="bold|italic"
                     />
@@ -134,6 +136,7 @@
                     android:textColorHint="@color/grey"
                     android:hint="@string/username"
                     style="@style/textView"
+                    android:textSize="20sp"
                     android:fontFamily="@font/inter_semibold"
                     android:textStyle="bold|italic" />
 
@@ -160,7 +163,7 @@
                     android:maxLength="100"
                     android:hint="@string/password"
                     style="@style/textView"
-                    android:textColor="@color/grey"
+                    android:textSize="20sp"
                     android:fontFamily="@font/inter_semibold"
                     android:textStyle="bold|italic"
                     />
