--- a/app/src/main/res/layout/photo_image_layout.xml
+++ b/app/src/main/res/layout/photo_image_layout.xml
@@ -4,14 +4,13 @@
     android:id="@+id/container"
     android:layout_width="170dp"
     android:layout_height="170dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginStart="16dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
         <ImageView
             android:id="@+id/imageViewAdapter"
             android:layout_width="150dp"
             android:layout_marginTop="10dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="15dp"
             android:layout_height="150dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
