--- a/app/src/main/res/drawable/menu_home_border.xml
+++ b/app/src/main/res/drawable/menu_home_border.xml
@@ -7,7 +7,7 @@
         />
 
     <solid
-        android:color="@color/backGroundAdapter"
+        android:color="@color/md_theme_light_surfaceVariant"
         />
 </shape>
 
