--- a/app/src/main/res/layout-land/fragment_personal.xml
+++ b/app/src/main/res/layout-land/fragment_personal.xml
@@ -65,7 +65,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/settings_48px"
-                    android:background="@color/backGroundAdapter"
+                    android:background="@color/md_theme_light_surfaceVariant"
                     android:layout_marginTop="10dp"
                     android:layout_marginStart="10dp"
                     />
@@ -79,7 +79,7 @@
                     android:layout_marginStart="40dp"
                     android:textSize="20sp"
                     android:textStyle="bold"
-                    android:background="@color/backGroundAdapter"/>
+                    android:background="@color/md_theme_light_surfaceVariant"/>
                 </LinearLayout>
 
                 <View
@@ -97,7 +97,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/history_48px"
-                        android:background="@color/backGroundAdapter"
+                        android:background="@color/md_theme_light_surfaceVariant"
                         android:layout_marginTop="10dp"
                         android:layout_marginStart="10dp"
                         />
@@ -111,7 +111,7 @@
                         android:layout_marginStart="40dp"
                         android:textSize="20sp"
                         android:textStyle="bold"
-                        android:background="@color/backGroundAdapter"/>
+                        android:background="@color/md_theme_light_surfaceVariant"/>
                 </LinearLayout>
                 <View
                     android:layout_width="wrap_content"
@@ -128,7 +128,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/help_48px"
-                        android:background="@color/backGroundAdapter"
+                        android:background="@color/md_theme_light_surfaceVariant"
                         android:layout_marginTop="10dp"
                         android:layout_marginStart="10dp"
                         />
@@ -142,9 +142,14 @@
                         android:layout_marginStart="40dp"
                         android:textSize="20sp"
                         android:textStyle="bold"
-                        android:background="@color/backGroundAdapter"/>
+                        android:background="@color/md_theme_light_surfaceVariant"/>
                 </LinearLayout>
-
+                <View
+                    android:layout_width="wrap_content"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginStart="60dp"
+                    android:background="@color/black" />
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
@@ -154,7 +159,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/logout_48px"
-                        android:background="@color/backGroundAdapter"
+                        android:background="@color/md_theme_light_surfaceVariant"
                         android:layout_marginTop="10dp"
                         android:layout_marginStart="10dp"
                         />
@@ -168,7 +173,7 @@
                         android:layout_marginStart="40dp"
                         android:textSize="20sp"
                         android:textStyle="bold"
-                        android:background="@color/backGroundAdapter"/>
+                        android:background="@color/md_theme_light_surfaceVariant"/>
                 </LinearLayout>
 
 
