--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -60,7 +60,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/settings_48px"
-            android:background="@color/backGroundAdapter"
+            android:background="@color/md_theme_light_surfaceVariant"
             android:layout_marginTop="10dp"
             android:layout_marginStart="10dp"
             />
@@ -74,7 +74,7 @@
             android:layout_marginStart="40dp"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:background="@color/backGroundAdapter"/>
+            android:background="@color/md_theme_light_surfaceVariant"/>
         </LinearLayout>
 
         <View
@@ -92,7 +92,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/history_48px"
-                android:background="@color/backGroundAdapter"
+                android:background="@color/md_theme_light_surfaceVariant"
                 android:layout_marginTop="10dp"
                 android:layout_marginStart="10dp"
                 />
@@ -106,7 +106,7 @@
                 android:layout_marginStart="40dp"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:background="@color/backGroundAdapter"/>
+                android:background="@color/md_theme_light_surfaceVariant"/>
         </LinearLayout>
         <View
             android:layout_width="wrap_content"
@@ -123,7 +123,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/help_48px"
-                android:background="@color/backGroundAdapter"
+                android:background="@color/md_theme_light_surfaceVariant"
                 android:layout_marginTop="10dp"
                 android:layout_marginStart="10dp"
                 />
@@ -137,7 +137,7 @@
                 android:layout_marginStart="40dp"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:background="@color/backGroundAdapter"/>
+                android:background="@color/md_theme_light_surfaceVariant"/>
         </LinearLayout>
         <View
             android:layout_width="wrap_content"
@@ -154,7 +154,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/logout_48px"
-                android:background="@color/backGroundAdapter"
+                android:background="@color/md_theme_light_surfaceVariant"
                 android:layout_marginTop="10dp"
                 android:layout_marginStart="10dp"
                 />
@@ -168,7 +168,7 @@
                 android:layout_marginStart="40dp"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:background="@color/backGroundAdapter"/>
+                android:background="@color/md_theme_light_surfaceVariant"/>
         </LinearLayout>
 
 
