--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -1,29 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".UI.core.Map.MapFragment">
 
 
-        <fragment
+        <org.osmdroid.views.MapView
             android:id="@+id/mapView"
-            android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:clickable="true"
+            android:focusable="true"
+            tools:ignore="SpeakableTextPresentCheck" />
 
         <ImageButton
-            android:id="@+id/shopButton"
-            android:onClick="onClick"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/center"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
-            android:src="@drawable/styler_48px"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="60dp"
-            android:contentDescription="@string/description"/>
-
+            android:layout_marginBottom="90dp"
+            android:src="@drawable/share_location_48px"
+            android:layout_marginEnd="20dp"
+            android:background="@color/md_theme_light_primary" />
 
 </RelativeLayout>
+
+    <!--
+    <?xml version="1.0" encoding="utf-8"?>
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".UI.core.Map.MapFragment">
+
+
+            <fragment
+                android:id="@+id/mapView"
+                android:name="com.google.android.gms.maps.SupportMapFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+            <ImageButton
+                android:id="@+id/shopButton"
+                android:onClick="onClick"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:src="@drawable/styler_48px"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="60dp"
+                android:contentDescription="@string/description"/>
+
+
+    </RelativeLayout>
+
+    -->
