--- a/app/src/main/res/layout/clothual_total_adapter.xml
+++ b/app/src/main/res/layout/clothual_total_adapter.xml
@@ -92,7 +92,7 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginEnd="10dp"
-        android:background="@color/backGroundAdapter"
+        android:background="@color/md_theme_light_surfaceVariant"
         android:src="@drawable/edit_48px"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/dati" />
@@ -103,7 +103,7 @@
         android:layout_height="30dp"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="40dp"
-        android:background="@color/backGroundAdapter"
+        android:background="@color/md_theme_light_surfaceVariant"
         android:contentDescription="delete"
         android:src="@drawable/delete_48px"
         app:layout_constraintEnd_toEndOf="parent"
@@ -113,7 +113,7 @@
         android:id="@+id/favorite"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:background="@color/backGroundAdapter"
+        android:background="@color/md_theme_light_surfaceVariant"
         android:contentDescription="preferiti"
         app:layout_constraintBottom_toBottomOf="@id/dati"
         android:layout_marginEnd="10dp"
